--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "npm run build:ts && tsc -p test/tsconfig.test.json && tap test/**/*.test.ts",
-    "start": "npm run build:ts && fastify start -l info dist/app.js",
+    "test": "yarn build:ts && tsc -p test/tsconfig.test.json && tap test/**/*.test.ts",
+    "start": "yarn build:ts && fastify start -l info dist/app.js",
     "build:ts": "tsc",
     "dev": "tsc && concurrently -k -p \"[{name}]\" -n \"TypeScript,App\" -c \"yellow.bold,cyan.bold\"  \"tsc -w\" \"fastify start -w -l info -P dist/app.js\""
   },
@@ -17,10 +17,10 @@
   "license": "ISC",
   "dependencies": {
     "fastify": "^3.0.0",
-    "fastify-plugin": "^3.0.0",
     "fastify-autoload": "^3.3.1",
-    "fastify-sensible": "^3.1.0",
-    "fastify-cli": "^2.10.0"
+    "fastify-cli": "^2.10.0",
+    "fastify-plugin": "^3.0.0",
+    "fastify-sensible": "^3.1.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.14",
